--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-validator": "^0.11.9",
     "ng-animate": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
